# ci-fail

./: .gitignore  CHANGELOG.md  Makefile  README.md  coverage.xml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
ci_fail/: __init__.py  __main__.py  analysis.py  api.py  cli.py  config.py  display.py  models.py  utils.py
docs/: getting-started.md  index.md
docs/reference/: api.md
tests/: test_cli.py  test_cli_compatibility.py  test_integration.py  test_module_structure.py
