[project]
name = "ci-fail"
version = "0.1.0"
description = "Utility CLI for checking PR CI checks with via Buildkite"
authors = [
    { name = "alex furrier", email = "safurrier@gmail.com" },
]
requires-python = ">= 3.9"
readme = "README.md"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
]

[project.scripts]
ci-fail = "ci_fail.cli:cli"

[project.optional-dependencies]
dev = [
    "mypy>=1.9.0",
    "pytest>=8.4.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.0",
    "pre-commit>=3.6.0",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.26.1",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "ci_fail",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "TID",
    "E402",
    "N",
    "S",
    "PTH",
    "RUF",
    "ICN",
]
ignore = [
    "E501",
    "TID252",
    "S101",
    "B904",  # Exception chaining - not critical for this refactoring
    "S603",  # subprocess call - acceptable for CLI tool
    "RUF012", # ClassVar - not critical for this refactoring
    "PTH109", # os.getcwd vs Path.cwd - not critical
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]

[tool.ruff.lint.isort]
known-first-party = [
    "ci_fail",
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
markers = [
    "smoke: High-level system validation tests for critical paths",
]
